--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer"
     android:layout_width="240dp"
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:background="#a8a7ff"
-    android:id="@+id/drawer"
     android:orientation="vertical">
 
     <Button
@@ -13,44 +12,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="홈"/>
+        android:text="홈" />
+
     <Button
         android:id="@+id/btn_gallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="방명록"/>
+        android:text="방명록" />
+
     <Button
         android:id="@+id/btn_halla"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="한라대학교"/>
+        android:text="한라대학교" />
+
     <Button
         android:id="@+id/btn_university"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:visibility="gone"
-        android:text="학교소개"/>
+        android:text="학교소개"
+        android:visibility="gone" />
+
     <Button
         android:id="@+id/btn_ice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:visibility="gone"
-        android:text="학과소개"/>
+        android:text="학과소개"
+        android:visibility="gone" />
+
     <Button
         android:id="@+id/btn_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:visibility="gone"
-        android:text="위치"/>
+        android:text="위치"
+        android:visibility="gone" />
+
     <Button
         android:id="@+id/btn_close"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="메뉴닫기"/>
+        android:text="메뉴닫기" />
 </LinearLayout>
